android: handle assets (romfs and datadir)

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# assets are handled by libcross2d
+app/src/main/assets/romfs
+app/src/main/assets/data
